# pr2-flip-cram-cds

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  pr2-example.asd
action/: CRAM2CDS.action  QueryOWL.action
data/: couplingDyn.gmm  masterDyn.gmm  slaveDyn.gmm
data/back/: constraints.yaml
data/flipping/: constraints.yaml
data/reaching/: constraints.yaml
data/swipping/: constraints.yaml
defs/: gripper.urdf.xacro
launch/: cds_controller.launch  custom_pr2.launch  objects.launch  pr2_example.launch  rcart_conf.launch  spawn_objects.launch  table.launch
models/table/: table.urdf.xacro
owl/: gmm.owl  gmm.owl.in
src/: cartesian_controller.cpp  cds_controller_pr2.cpp  controllers.lisp  cram2cds_client.py  cram2cds_server.py  designators.lisp  eeframe_tf_broadcaster.cpp  package.lisp  parameters.lisp  plan.lisp  query_knowrob_client.py  query_knowrob_server.py  tutorial.lisp
